syntax = "proto3";

package product;

option go_package = "proto/product";

          service Product {
            rpc GetProduct (GetProductRequest) returns (GetProductResponse);
          }

          message GetProductRequest {
            string id = 1;
          }

          message GetProductResponse {
            string id = 1;
            string name = 2;
            string description = 3;
            string price = 4;
            string created_at = 7;
            string updated_at = 8;
          }
